# Projects

Springer_Problem/: CMakeLists.txt  Chessboard.cpp  Chessboard.h  Color.h  Field.cpp  Field.h  King.h  Knight.cpp  Knight.h  Pawn.h  Piece.h  main.cpp
Springer_Problem/GraphLib/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphLib.h  Node.cpp  Node.h  NodeExistsException.cpp  NodeExistsException.h  test.cpp  test.h
Springer_Problem/TestData/: tst.txt
Ultraschallsensor_I2C /: README.md  Ultraschalsensor_and_I2C Debug.launch  Ultraschalsensor_and_I2C.ioc
Ultraschallsensor_I2C /Core/Inc/: stm32l4xx_it.h
Ultraschallsensor_I2C /Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Ultraschallsensor_I2C /Debug/: Ultraschalsensor_and_I2C.elf  Ultraschalsensor_and_I2C.list  Ultraschalsensor_and_I2C.map  makefile
Ultraschallsensor_I2C /Debug/Core/Src/: main.cyclo  main.d  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.su  stm32l4xx_it.cyclo  stm32l4xx_it.su
Ultraschallsensor_I2C /Debug/Drivers/STM32L4xx_HAL_Driver/Src/: subdir.mk
